Implement sound and LED. Updates. Refactoring
