# swagger-output.json
@@ -6,7 +6,7 @@
     "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
   },
   "host": "localhost:8080",
-  "basePath": "/",
+  "basePath": "/api/v1",
   "schemes": [
     "http"
   ],
@@ -19,7 +19,7 @@
   ],
   "paths": {
     "/forward/{power}": {
-      "post": {
+      "get": {
         "description": "",
         "parameters": [
           {
@@ -40,7 +40,7 @@
       }
     },
     "/backward/{power}": {
-      "post": {
+      "get": {
         "description": "",
         "parameters": [
           {
@@ -61,7 +61,7 @@
       }
     },
     "/stop": {
-      "post": {
+      "get": {
         "description": "",
         "parameters": [],
         "responses": {
@@ -72,9 +72,45 @@
       }
     },
     "/brake": {
-      "post": {
+      "get": {
         "description": "",
         "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/sound/{sound}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "sound",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/led/{color}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "color",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
